--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div>hello,</div>
+  <div id="app"></div>
   <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
   <script src="liff-starter.js"></script>
 </body>
